--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -46,6 +46,10 @@
         a{
             padding: 0;
             margin-right: 1em !important;
+
+            &:last-of-type{
+                margin: 0 !important;
+            }
         }
     }
    
