--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -96,8 +96,8 @@
     }
 
     @media (max-width: 720px){
-        font-size: calc(1.1rem + 2.7vw);
-        margin: 20px 0 0 70px;
+        font-size: calc(1rem + 2.7vw);
+        margin: 20px 0 0 0;
     }
 }
 
@@ -114,31 +114,22 @@
     display: inline-block;
     font-weight: 400;
     line-height: 1.5;
-    color: #212529;
     text-align: center;
     text-decoration: none;
     vertical-align: middle;
     cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
     user-select: none;
-    background-color: transparent;
+    background-color: #ffffff8a;
     border: 1px solid transparent;
-    padding: 0.375rem 0.75rem;
-    font-size: 1rem;
     border-radius: 0.25rem;
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
     padding: 0.5rem 1rem;
     font-size: 1.25rem;
-    border-radius: 0.3rem;
-    cursor: pointer;
     color: #212529;
     border-color: #212529;
     margin-left: 0px;
 
     @media (max-width: 720px){
-        background-color: #ffffff8a;
-        margin-left: 70px;
+        margin-left: 0px;
     }
 }
