--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -1,23 +1,53 @@
 .hero{
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    height: 100%;
     display: flex;
     flex-direction: column;
     width: 100%;
-    background-image: url("/assets/hero.jpg");
-    height: 1100px; 
     background-repeat: no-repeat; 
     background-size: 100% auto;
+}
 
-    @media (max-width: 1140px){
-        height: 680px;
+.heroImg{
+    position: absolute;
+    top: 0;
+    left: 0;
+    object-fit: fill;
+    width: 100%;
+    height: auto;
+}
+
+.heroWrapper{
+    position: relative;
+    padding-top: 800px / 1200px * 100%;
+    width: 100%;
+    height: 100%;
+
+    @media (max-width: 720px){
+        padding-top: 700px / 438px * 100%;
     }
+}
+
+.heroPartners{
+    position: absolute;
+    bottom: 20%;
+    left: 3em;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
 
     @media (max-width: 992px){
-        height: 510px;
+        bottom: 5%
     }
 
     @media (max-width: 720px){
-        height: 560px;
-        background-image: url("/assets/hero-mobile.jpg");
+        display: none;
     }
 }
 
@@ -92,7 +122,7 @@
 
     @media (max-width: 992px){
         font-size: calc(.5rem + 2.7vw);
-        margin: 20px 0 0 0;
+        margin: 0;
     }
 
     @media (max-width: 720px){
@@ -119,7 +149,7 @@
     vertical-align: middle;
     cursor: pointer;
     user-select: none;
-    background-color: #ffffff8a;
+    // background-color: #ffffff8a;
     border: 1px solid transparent;
     border-radius: 0.25rem;
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
