footer email signup
using mailchimp

--- a/styles/footer.module.scss
+++ b/styles/footer.module.scss
@@ -11,3 +11,12 @@
     align-items: center;
     border-left: 1px solid #ced4da;
 }
+
+.formFieldB{
+    position: absolute;
+    right: 99999px;
+}
+
+.formCntr{
+    height: 58px;
+}
