--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -109,6 +109,10 @@
     }
 }
 
+.navbar{
+    background-color: rgba(255, 255, 255, .9) !important;
+}
+
 .heroHashTag{
     font-size: calc(1.375rem + 1.5vw);
     font-weight: 700;
