--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -86,7 +86,7 @@
     @media (max-width: 992px){
         position: fixed;
         z-index: 999;
-        bottom: 0;
+        bottom: .75rem;
         left: 0;
         width: 100%;
         background-color: #fff;
@@ -98,15 +98,13 @@
             margin: 0 !important;
             font-size: 0.7rem !important;
             text-align: center;
-            padding: .5em;
+            padding: .5rem;
             display: flex;
             flex-direction: column;
         }
     }
 
-    @media (max-width: 720px){
-        padding: 5px 5;
-    }
+   
 }
 
 .navbar{
