--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -86,7 +86,7 @@
     @media (max-width: 992px){
         position: fixed;
         z-index: 999;
-        bottom: .75rem;
+        bottom: 0;
         left: 0;
         width: 100%;
         background-color: #fff;
