--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -104,6 +104,8 @@
             margin: 0 !important;
             font-size: 0.7rem !important;
             text-align: center;
+            justify-content: center;
+            align-items: center;
             padding: .5rem;
             display: flex;
             flex-direction: column;
