--- a/styles/page.module.scss
+++ b/styles/page.module.scss
@@ -30,12 +30,26 @@
     padding-top: 36%;
     width: 100%;
     height: 100%;
-    min-height: 430px;
+    min-height: 500px;
+
+    @media (max-width: 500px){
+        min-height: 740px;
+        background-position: center;
+    }
+}
+
+.headingWrapper{
+   margin-top: 3rem;
+   padding: 0 2rem;
 }
 
 .heading{
     font-size: 4rem;
     font-weight: 600;
+
+    @media (max-width: 500px){
+        font-size: 3rem;
+    }
 }
 
 .subHeading{
